--- a/petri-obj-paint/pom.xml
+++ b/petri-obj-paint/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
 
     </dependencies>
 
