--- a/petri-obj-paint/pom.xml
+++ b/petri-obj-paint/pom.xml
@@ -36,6 +36,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <!-- Use the latest version -->
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.sh0nk</groupId>
             <artifactId>matplotlib4j</artifactId>
             <version>0.5.0</version>
